[project]
name = "tarn"
dynamic = ["version"]
description = "A hashmap-based storage on local and remote disks"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["storage", "cache", "invalidation"]
authors = [
    { name = "Max", email = "maxs987@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy",
    "cloudpickle>=2.0.0,<2.3.0",
    "paramiko==2.*",
    "scp",
    "tqdm",
    "redis",
    "pyyaml",
    "humanfriendly",
    "pydantic",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/neuro-ml/tarn"
"Issues" = "https://github.com/neuro-ml/tarn/issues"
"Source" = "https://github.com/neuro-ml/tarn"
"Docs" = "https://neuro-ml.github.io/tarn"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tarn"]

[tool.setuptools.dynamic]
version = { attr = "tarn.__version__.__version__" }
