[project]
name = 'tarn'
dynamic = ['version', 'dependencies']
description = 'A hashmap-based storage on local and remote disks'
readme = 'README.md'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
keywords = ['storage', 'cache', 'invalidation']
authors = [
    { name = 'Max', email = 'max@ira-labs.com' },
    { name = 'Talgat', email = 't.saparov@ira-labs.com' },
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
]

[project.urls]
'Homepage' = 'https://github.com/neuro-ml/tarn'
'Issues' = 'https://github.com/neuro-ml/tarn/issues'
'Source' = 'https://github.com/neuro-ml/tarn'

[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['tarn']

[tool.setuptools.dynamic]
version = { attr = 'tarn.__version__.__version__' }
dependencies = { file = 'requirements.txt' }

[tool.flake8]
# W503: line break before binary operator is actually considered best-practice
# E203: spaces around complex variables in slices are pep-right
# F401: unused imports in __init__.py-s
# I251: allow absolute imports in upper files
# B019: @lru_cache for static methods is fine
# B008: calling the function as default value is just part of the typer's interface
# C408: for identifier-like fields dict(x=y) is just more concise
ignore = ["W503", "E203", "B019", "B028", "C408"]
per-file-ignores = ["**/__init__.py:F401", "tests/*:I251"]
max-line-length = 120
banned-modules = "tarn.* = Use relative imports"

[tool.isort]
line_length = 120
profile = 'black'
combine_as_imports = true
